<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SportsBarFinder</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="sports_team">Search for team or bar</string>
    <string name="insert_bar_title">Insert Bar</string>
    <string name="insert_bar">Bar</string>
    <string name="insert_city">City</string>
    <string name="insert_address">Address</string>
    <string name="insert_team">Teams separated by commas</string>
    <string name="action_insert">Insert</string>

</resources>
